<resources>
    <string name="about_notice">Notices</string>
    <string name="about_tutorial">Tutorial</string>
    <string name="aboutversion">Version</string>
    <string name="account_change_des">Current Access ID</string>
    <string name="account_change_new_account_des">New Access ID</string>
    <string name="account_change_new_id_wrong">Use 4~24 characters with uppercase, lowercase alphabets and numbers.</string>
    <string name="account_change_new_passwd_dont_same">Passwords do not match, please re-enter and try again.</string>
    <string name="account_change_new_passwd_id_same">Password cannot be same as ID.</string>
    <string name="account_change_new_passwd_input_notice">Enter Access PW</string>
    <string name="account_change_new_passwd_wrong">Use 6~24 characters with uppercase, lowercase alphabets, numbers and symbols.\nThis special character cannot be used \\ / : * ? \" &lt; &gt; | &amp; % + ;</string>
    <string name="account_change_old_id_input_notice">Current Access ID</string>
    <string name="account_change_old_passwd_input_notice">Current Access PW</string>
    <string name="account_change_old_passwd_wrong">New Access PW</string>
    <string name="agent_access_account">Change Access ID</string>
    <string name="agent_allow_ip">IP restriction</string>
    <string name="agent_allow_ip_add">Add allowed IP</string>
    <string name="agent_allow_ip_added">Allowed IP list</string>
    <string name="agent_allow_ip_input_porm">Enter in IP format. (ex.193.168.20.2)</string>
    <string name="agent_allow_ip_input_range">Enter a valid IP address.</string>
    <string name="agent_allow_mac">MAC restriction</string>
    <string name="agent_allow_mac_add">Whitelist MAC address</string>
    <string name="agent_allow_mac_added">Allowed MAC addresses</string>
    <string name="agent_allow_mac_input_porm">Verify the MAC information.\n ex)0A23BC00AC</string>
    <string name="agent_control_title">Agent Management</string>
    <string name="agent_discription">Installing Agent.\nLog in using RemtoeView credentials.</string>
    <string name="agent_display_name">Display Name</string>
    <string name="agent_expired">서비스 기간종료</string>
    <string name="agent_id">Access ID :</string>
    <string name="agent_install">Install Agent</string>
    <string name="agent_install_discription">Install the agent to control this device.</string>
    <string name="agent_install_group_name">Select group</string>
    <string name="agent_install_id">Access ID :</string>
    <string name="agent_install_no_matching_pass">Passwords do not match, please re-enter and try again.</string>
    <string name="agent_install_pass">Password :</string>
    <string name="agent_install_pass_re">Confirm Password :</string>
    <string name="agent_install_rule_equal">Password cannot be same as ID.</string>
    <string name="agent_install_rule_id">Use 4~24 characters with uppercase, lowercase alphabets and numbers.</string>
    <string name="agent_log">View Log</string>
    <string name="agent_log_agent_login">Logged in [%1$s].</string>
    <string name="agent_log_agent_login_faile">Agent Login Result: %1$s (%2$s)</string>
    <string name="agent_log_agent_login_ok">Logged in [%1$s].</string>
    <string name="agent_log_allow_connection">Unauthorized Access attempted by [IP:%1$s/MAC:%2$s/User:%3$s]</string>
    <string name="agent_log_push_service_close">Push service ended.</string>
    <string name="agent_log_push_service_start">Push service started.</string>
    <string name="agent_log_remote_close">Remote connection has ended.</string>
    <string name="agent_log_remote_connection_check">Remote connection status checked.</string>
    <string name="agent_log_remote_connection_requst">(IP: %1$s) requested remote control (Port: %2$s).</string>
    <string name="agent_log_remote_open">Remote control session started.</string>
    <string name="agent_log_remove">Erase</string>
    <string name="agent_log_title">Log Viewer</string>
    <string name="agent_notification_text">Tap to end remote connection.</string>
    <string name="agent_over">라이선스 수 초과</string>
    <string name="agent_passwd">Password :</string>
    <string name="agent_passwd_confirm">Confirm Password :</string>
    <string name="agent_popup_agent_remove">PC has been removed from \"My Computers\".</string>
    <string name="agent_popup_rsperm_install_guide">RSPERM must be installed to remotely access the device.\nDo you want to continue?</string>
    <string name="agent_popup_rsperm_notsupport">This device is not compatible with RemoteView.</string>
    <string name="agent_pre_setting_title">RemoteView Agent Settings</string>
    <string name="agent_setting">Settings</string>
    <string name="agentinfo_first_message">This device is available for connection.</string>
    <string name="agentlist_hint">Search by group or PC name.</string>
    <string name="agentlist_menu_agentremove">Remove Agent</string>
    <string name="agnet_logout_notice">Agent is logged out.\nCheck the network and agent status.</string>
    <string name="allow_permission_des">To use RemoteView Agent, press the button below and allow all required permission.</string>
    <string name="allow_permission_title">You do not have the permission.</string>
    <string name="app_name">RVAgent</string>
    <string name="call_permission_dialog">Permission settings</string>
    <string name="cinfo_address">IP address</string>
    <string name="cmderr_agent_reset_config_fail">Failed to reset environment values of Agent.</string>
    <string name="cmderr_agentconnect_unable">Connection is unavailable.</string>
    <string name="cmderr_already_remote_control">This user ID is already in use. Would you like to disconnect the other user and login?</string>
    <string name="cmderr_amt_invalid_auth">ID or password incorrect.\nPlease re-enter your ID and password</string>
    <string name="cmderr_amt_invalid_command">Confirm vPro System status. command has been cancelled.</string>
    <string name="cmderr_amt_not_access">Currently , vPro power management features are not available.\nTo use vPro power management, there must be any other powered on PC in the same network.\nCheck the status of your PCs and try again.</string>
    <string name="cmderr_get_process_list_fail">Failed to get the process list of Remote System.</string>
    <string name="cmderr_get_screenshot_fail">Failed to get the current screen of Remote System.</string>
    <string name="cmderr_get_system_info_fail">Failed to get the system information of Remote System.</string>
    <string name="cmderr_noagent">Cannot connect. The remote client is not running.</string>
    <string name="cmderr_not_allowed_ip_address">Access form this IP or Mac address is not permitted.</string>
    <string name="cmderr_option_file_create_fail">Remote System failed to initiate process for control.</string>
    <string name="cmderr_process_execute_fail">Failed to run process requested from Remote System.</string>
    <string name="cmderr_process_kill_fail">Failed to kill process requested from Remote System.</string>
    <string name="cmderr_session_connect_fail">Failed to connect session server.</string>
    <string name="cmderr_session_send_fail">Failed to sending data to session server.</string>
    <string name="cmderr_session_socket_fail">Socket error occurred in communicating session server.</string>
    <string name="cmderr_system_reboot_fail">Execution Failed, Please try again.</string>
    <string name="common_ok">OK</string>
    <string name="computer_active_cancel">Cancel</string>
    <string name="computer_active_ok">OK</string>
    <string name="computer_uninstall">Remove</string>
    <string name="computer_uninstall_msg">Are you sure you want to delete?</string>
    <string name="connect_url">Connection URL</string>
    <string name="connecting_notice_message">You are currently connected with the mobile device.\nPress X to end.</string>
    <string name="corpid">Company ID</string>
    <string name="delete_agent_des">Registered user authenticate. Enter user ID, Password. Registered user to delete the program you are using.</string>
    <string name="devicename_langth_notice">Device Nickname must be less than 50 characters in length.</string>
    <string name="devicename_notice">Enter the display name.</string>
    <string name="dialog_system_setting_permission">Allow \"Write system settings\" permission.</string>
    <string name="enterprise_customers">For Enterprise customers</string>
    <string name="etc">More</string>
    <string name="feedback">Feedback</string>
    <string name="globalip">Public IP</string>
    <string name="gotowebsite">Go to website</string>
    <string name="group_agent_count_max">Maximum number of Agent is set in the configuration. The Agent cannot be installed to exceed the maximum number of group.</string>
    <string name="group_no_folder">There is no subfolder.</string>
    <string name="group_select">Selected</string>
    <string name="id">ID</string>
    <string name="information">Basic Information</string>
    <string name="ip_address_help_sub_title">Configuring IP restriction by OS</string>
    <string name="knox_blacklist_not_support">This device is not compatible for RemoteView Agent.</string>
    <string name="knox_blacklist_osupdate">Update the device to the latest version to use RemoteView Agent.</string>
    <string name="language">Language</string>
    <string name="lastaccesstime">Last accessed date</string>
    <string name="lastuser">Last accessed user</string>
    <string name="license">License info.</string>
    <string name="license_count_max">The Agent cannot be installed to exceed the maximum number of valid licenses</string>
    <string name="localip">Private IP</string>
    <string name="log_data_dalete_confirm_message">Are you sure you want to erase the entire log?</string>
    <string name="login">Log In</string>
    <string name="logon_message">This device can be remotely accessed from a different device.</string>
    <string name="logout">Log Out</string>
    <string name="mac_address_help_sub_title">Configuring MAC restriction by OS</string>
    <string name="mac_address_setting_hint">Do not include separators (:-.)</string>
    <string name="macaddress">MAC address</string>
    <string name="mailfeedback_subject">Contact Us</string>
    <string name="mailtofriend_comment_word">Comment</string>
    <string name="member_join">Sign Up</string>
    <string name="mobile_name">Mobile name</string>
    <string name="msg_checkagain">Please check it again</string>
    <string name="msg_endsession">Do you want to end the session?</string>
    <string name="msg_inputcorpid">Company ID</string>
    <string name="msg_inputloginid">Enter your ID</string>
    <string name="msg_inputlogininfo">Type your ID and Password</string>
    <string name="msg_inputloginpwd">Enter your password</string>
    <string name="msg_inputwebid">User ID</string>
    <string name="msg_inputwebpwd">User password</string>
    <string name="msg_sendfrom">Sent from my Android</string>
    <string name="msg_unableserver">Abnormal server registration</string>
    <string name="password">Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="proxyaddr">Server</string>
    <string name="proxyid">Username</string>
    <string name="re_popup_delete">Delete</string>
    <string name="remoteview_welcome_message">Welcome! RemoteView offers two choices for your remote environments. Select the right product for you.</string>
    <string name="tutorial_select_corp">Business version</string>
    <string name="tutorial_select_corp_desc">Optimized for enteprise environment such as management by group, real-time monitoring, etc.</string>
    <string name="tutorial_select_next">Next</string>
    <string name="tutorial_select_person">Personal version</string>
    <string name="tutorial_select_person_desc">Recommended for remote and moving workers.</string>
</resources>